@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-06T16:23:53Z",
-  "count_outdated" : 50,
-  "uniques_outdated" : 40,
-  "count" : 98,
-  "uniques" : 67,
+  "timestamp" : "2022-04-07T01:15:45Z",
+  "count_outdated" : 61,
+  "uniques_outdated" : 47,
+  "count" : 106,
+  "uniques" : 72,
   "clones" : [
-    {
-      "timestamp": "2022-03-23T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 11 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 7 ]
-    },
     {
       "timestamp": "2022-03-29T00:00:00Z",
       "count": 13,
