@@ -1,12 +1,7 @@
 {
-  "count": 48,
+  "count": 45,
   "uniques": 18,
   "clones": [
-    {
-      "timestamp": "2022-03-23T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-03-29T00:00:00Z",
       "count": 13,
